--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Hind:400|Montserrat:600');
+
 /* General Styles */
 
 /* Use box-sizing:border-box to include padding and border in the element's total width and height */
