--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body, h1, p, fieldset, legend, label, input, textarea, select {
   margin: 0;
   padding: 0;
   border: none;
-  font-family: inherit;
   font-size: 100%;
   font-weight: inherit;
   color: inherit;
@@ -23,14 +22,16 @@ html, body, h1, p, fieldset, legend, label, input, textarea, select {
 html, body {
   font-size: 16px;
   min-width: 320px;
-}
+  line-height: 1.75;
+  font-family: 'Hind', sans-serif;
+ }
 
 /* Use the Montserrat font for headings and the Hindi font for paragraphs */
 h1, h2, h3, h4, h5, h6 {
+  margin: 3rem 0 1.38rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   line-height: 1.2;
-  margin-bottom: 1rem;
   text-transform: capitalize;
 }
 
